dimagi-SalesforceFB/src/objects/DContract__c.object
<CustomObject>
    <description>Tracks all of Dimagi&apos;s Contracts</description>
    <fields>
        <fullName>ALL_TIME_Income__c</fullName>
        <description>Updated monthly by Jason doing the Intacct data upload. Total Income invoiced on the project to date.</description>
        <inlineHelpText>Updated monthly by Jason doing the Intacct data upload. Total Income invoiced on the project to date.</inlineHelpText>
        <label>ALL TIME Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which account is the contract signed with.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>DContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Intacct_Income__c</fullName>
        <description>This field is income from 1/1/14 to Date</description>
        <inlineHelpText>This field is income from 1/1/14 to Date</inlineHelpText>
        <label>All Intacct Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>What is the a field this Contract is in. Can select multiple.</inlineHelpText>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture and Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services for the Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gender Equality and Women&apos;s Empowerment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Governance and Accountability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water, Sanitation, &amp; Hygiene</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>BAA__c</fullName>
        <description>If we have signed a BAA for this contract (and are therefore enforcing HIPAA compliance)</description>
        <inlineHelpText>If we have signed a BAA for this contract (and are therefore enforcing HIPAA compliance)</inlineHelpText>
        <label>HIPAA Contract</label>
        <picklist>
            <picklistValues>
                <fullName>BAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backstop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who to escalate to for issues.</inlineHelpText>
        <label>Backstop</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@dimagi.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Backstop</relationshipLabel>
        <relationshipName>Backstop</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billable_Expense_Income__c</fullName>
        <label>Billable Expense Income</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Travel__c</fullName>
        <label>Billable Travel</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Used__c</fullName>
        <description>(Services Spend + Product Spend + Project Travel Spend + External Sub-contract Spend + Project Other Spend) / Total Contract Amount</description>
        <formula>(Product_Spend__c+Services_Spend__c+Direct_Costs_Travel_Expenses__c+Direct_Costs_Sub_contract_Expenses__c+Project_Other_Spent__c)/Total_Amount_of_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>(Services Spend + Product Spend + Project Travel Spend + External Sub-contract Spend + Project Other Spend) / Total Contract Amount</inlineHelpText>
        <label>% Budget Used</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_by_Contract_Dates__c</fullName>
        <description>% Time into Contract minus % of budget used</description>
        <formula>Percent_through_Contract__c - Budget_Used__c</formula>
        <inlineHelpText>% Time into Contract minus % of budget used</inlineHelpText>
        <label>Buffer % by Time into Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Buffer_by_SOW_Completed__c</fullName>
        <description>% of Work Completed (populated by PM in PRO) minus % of Budget Used</description>
        <formula>Percent_through_SOW_deliverables__c - Budget_Used__c</formula>
        <inlineHelpText>% of Work Completed (populated by PM in PRO) minus % of Budget Used</inlineHelpText>
        <label>Buffer % by Work Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Burdened_Income_Budget__c</fullName>
        <description>Full Services budget (fully loaded services portion) from the budget in the Contract</description>
        <inlineHelpText>Full Services budget (fully loaded services portion) from the budget in the Contract</inlineHelpText>
        <label>Contract Services Budget</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <description>What Channel is the Opportunity (Sales, B2B, Pre-Bid, Other Competitive Bid, NIH, etc.)? 
See https://confluence.dimagi.com/display/BD/BD+Channels</description>
        <inlineHelpText>What Channel is the Opportunity (Sales, B2B, Pre-Bid, Other Competitive Bid, NIH, etc.)? 
See https://confluence.dimagi.com/display/BD/BD+Channels</inlineHelpText>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B - Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Competitive Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIH Grant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORE Funding (Gates)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>When the project actually ends.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Expense_BUDGET__c</fullName>
        <description>TOTAL Expense Budget from Contract Data</description>
        <inlineHelpText>TOTAL Expense Budget from Contract Data</inlineHelpText>
        <label>Contract Total Expense BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <inlineHelpText>When the contract actually starts.</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Set based on if the contract is Firm Fixed Price (FFP - billing based on deliverables or milestones completed only) or Time &amp; Materials (T&amp;M - billing based on actual time spent toward the efforts)</description>
        <inlineHelpText>Set based on if the contract is Firm Fixed Price (FFP - billing based on deliverables or milestones completed only) or Time &amp; Materials (T&amp;M - billing based on actual time spent toward the efforts)</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>FFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Plus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contracting_Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Business Unit that signed the contract with the customer (DSA, DSI, Inc).</inlineHelpText>
        <label>Contract Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts (Contracting Business Unit)</relationshipLabel>
        <relationshipName>Implementing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DLAC_Custom_Services_income__c</fullName>
        <label>DLAC Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DLAC_Project_Expense_Income_Billable__c</fullName>
        <label>DLAC Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DLAC_Project_Expense_Income_NoBillable__c</fullName>
        <label>DLAC Project Expense Income NoBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DLAC_Standard_Services_income__c</fullName>
        <label>DLAC Standard Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz_Custom_Services_income__c</fullName>
        <label>DMoz Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz_Project_Expense_Income_Billable__c</fullName>
        <label>DMoz Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz_Project_Expense_Income_NoBillable__c</fullName>
        <label>DMoz Project Expense Income NoBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMoz_Standard_Services_income__c</fullName>
        <label>DMoz Standard Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_Custom_Services_income__c</fullName>
        <label>DSA Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_Project_Expense_Income_Billable__c</fullName>
        <label>DSA Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_Project_Expense_Income_NonBillable__c</fullName>
        <label>DSA Project Expense Income NonBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSA_Standard_Services_income__c</fullName>
        <label>DSA Standard Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_Custom_Services_income__c</fullName>
        <label>DSI Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_Project_Expense_Income_Billable__c</fullName>
        <label>DSI  Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_Project_Expense_Income_NonBillable__c</fullName>
        <label>DSI Project Expense Income NonBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DSI_Standard_Services_income__c</fullName>
        <label>DSI Standard Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_Custom_Services_income__c</fullName>
        <label>DWA Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_Project_Expense_Income_Billable__c</fullName>
        <label>DWA Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_Project_Expense_Income_NonBillable__c</fullName>
        <label>DWA Project Expense Income NonBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DWA_Standard_Services_income__c</fullName>
        <label>DWA Standard Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_of_Contract_Execution__c</fullName>
        <label>Date of Contract Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_Contract_BUDGET__c</fullName>
        <description>Subcontract budget from Contract that is going to external parties (not Dimagi budget)</description>
        <inlineHelpText>Subcontract budget from Contract that is going to external parties (not Dimagi budget)</inlineHelpText>
        <label>External Sub-contract BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Sub_contract_Expenses__c</fullName>
        <description>External Subcontract spend on external parties</description>
        <inlineHelpText>External Subcontract spend on external parties</inlineHelpText>
        <label>External Sub-contract Spend</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Total_Expenses__c</fullName>
        <description>Calculated (updated monthly): Project Travel Spend + External Sub-contract Spend + Project Other Spend</description>
        <inlineHelpText>Calculated (updated monthly): Project Travel Spend + External Sub-contract Spend + Project Other Spend</inlineHelpText>
        <label>Expense &amp; Travel Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_BUDGET__c</fullName>
        <description>Travel budget from the contract</description>
        <inlineHelpText>Travel budget from the contract</inlineHelpText>
        <label>Project Travel BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Costs_Travel_Expenses__c</fullName>
        <description>Spend to date on Travel Expenses from Intacct Financial records.</description>
        <inlineHelpText>Spend to date on Travel Expenses from Intacct Financial records.</inlineHelpText>
        <label>Project Travel Spend</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain</label>
        <referenceTo>Domain__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration_months__c</fullName>
        <description>Calculated based on start and end dates in the contract object</description>
        <formula>MONTH( Contract_End_Date__c ) + (YEAR( Contract_End_Date__c )*12) - MONTH( Contract_Start_Date__c ) - (YEAR( Contract_Start_Date__c )*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on start and end dates in the contract object</inlineHelpText>
        <label>Duration (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EV_Date_1_Minus_Expense_Income__c</fullName>
        <formula>if( Contract_End_Date__c &lt; $Setup.Expected_Value__c.EV_Date_1__c ,
 Total_Non_Expense_Income_Remaining__c  ,
( Total_Non_Expense_Income_Remaining__c  * ($Setup.Expected_Value__c.EV_Date_1__c - TODAY()) / (Contract_End_Date__c - TODAY())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV Date 1 Minus Expense Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EV_Date_1__c</fullName>
        <formula>if( Contract_End_Date__c &lt;  $Setup.Expected_Value__c.EV_Date_1__c ,
 Total_Amount_REMAINING__c ,
(Total_Amount_REMAINING__c * ($Setup.Expected_Value__c.EV_Date_1__c - TODAY()) / (Contract_End_Date__c - TODAY())))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EV Date 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Efficiency_Owner_BU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for the Aggregate Weighted Execution Efficiency by BU. Sometimes the Execution Owner (BU) field doesn&apos;t represent the right BU for evaluating Efficiency, so we update this field for exceptions</description>
        <inlineHelpText>This field is for the Aggregate Weighted Execution Efficiency by BU. Sometimes the Execution Owner (BU) field doesn&apos;t represent the right BU for evaluating Efficiency, so we update this field for exceptions</inlineHelpText>
        <label>Efficiency Owner (BU)</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Contracts (Execution Owner)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Monthly_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Monthly Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execution_Efficiency__c</fullName>
        <description>(Services Budget * % of Work Completed) / Services Spend
If any blanks in variables is set to 100%.</description>
        <formula>if(and(Services_Budget__c  &gt; 0, Services_Spend__c &gt;0),(Services_Budget__c *  Percent_through_SOW_deliverables__c )/ Services_Spend__c, 1)</formula>
        <inlineHelpText>(Services Budget * % of Work Completed) / Services Spend
If any blanks in variables is set to 100%.</inlineHelpText>
        <label>Execution Efficiency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Execution_FTE_Actual__c</fullName>
        <description>Total_Labor_Expenses__c / $120,000/ ((today()- Contract_Start_Date__c)/365)</description>
        <formula>Services_Spend__c / 120000/  ((today()- Contract_Start_Date__c)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total_Labor_Expenses__c / $120,000/ ((today()- Contract_Start_Date__c)/365)</inlineHelpText>
        <label>Execution FTE - Actual</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Execution_FTE_Budget_Estimate__c</fullName>
        <description>Execution_EV_Budget__c / $120,000/ ((Contract_End_Date__c - Contract_Start_Date__c)/365)</description>
        <formula>Services_Budget__c / 120000/ ((Contract_End_Date__c - Contract_Start_Date__c)/365)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Execution_EV_Budget__c / $120,000/ ((Contract_End_Date__c - Contract_Start_Date__c)/365)</inlineHelpText>
        <label>Execution FTE Budget Estimate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Buffer__c</fullName>
        <description>Percent of the Total Contract minus Expenses that will not be directly allocated via Fogbugz or Intacct data, and is expected to fund other core activities.</description>
        <inlineHelpText>Percent of the Total Contract minus Expenses that will not be directly allocated via Fogbugz or Intacct data, and is expected to fund other core activities.</inlineHelpText>
        <label>Expected % Buffer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Margin__c</fullName>
        <description>Originally estimated by Opp Owner, but then updated or agreed to by GS during handoff from BD.</description>
        <inlineHelpText>Originally estimated by Opp Owner, but then updated or agreed to by GS during handoff from BD.</inlineHelpText>
        <label>Expected % Buffer (Mustafa)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expense_Income_BUDGET_Percent__c</fullName>
        <description>Calculated from Contract Expesnes Budget over sum of services, product, and expense budget</description>
        <formula>Contract_Expense_BUDGET__c /(  Burdened_Income_Budget__c + Product_Income_Budget__c + Contract_Expense_BUDGET__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from Contract Expesnes Budget over sum of services, product, and expense budget</inlineHelpText>
        <label>Contract Expense BUDGET Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Field_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Email</field>
                <operation>contains</operation>
                <value>@dimagi.com</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Field Manager)</relationshipLabel>
        <relationshipName>FieldManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <description>Notes on invoicing and reporting for the finance team</description>
        <label>Financial Notes</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>First_Nag_Sent_Date__c</fullName>
        <label>First Nag Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fly_America_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Certain contracts require that ALL travel be booked through American owned enterprises, where possible. If this contract is checked it requires first checking for US carriers and making sure you have justification if not going through a US carrier.</description>
        <inlineHelpText>Certain contracts require that ALL travel be booked through American owned enterprises, where possible. If this contract is checked it requires first checking for US carriers and making sure you have justification if not going through a US carrier.</inlineHelpText>
        <label>Fly America Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fourth_Nag_Sent_Date__c</fullName>
        <label>Fourth Nag Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization is providing the funding</inlineHelpText>
        <label>Funding Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FundingContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GS_Execution_Budget__c</fullName>
        <description>Services Budget * % of Services Budget for GS</description>
        <formula>Services_Budget__c *  of_Services_budget_for_GS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Services Budget * % of Serivces Budget for GS</inlineHelpText>
        <label>GS Project Services Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Completed__c</fullName>
        <description>% Work Completed * GS Services Budget</description>
        <formula>Percent_through_SOW_deliverables__c *  GS_Execution_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>% Work Completed * GS Services Budget</inlineHelpText>
        <label>GS Services Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_12_month__c</fullName>
        <description>Calculated based on Contract Dates and Total GS Services Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 12), Total_Services_Work_Remaining__c , 
Total_Services_Work_Remaining__c * (12 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total GS Services Remaining</inlineHelpText>
        <label>GS Services Work (12 month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_18_month__c</fullName>
        <description>Calculated based on Contract Dates and Total GS Services Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 18), 
Total_Services_Work_Remaining__c , 
Total_Services_Work_Remaining__c * (18 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total GS Services Remaining</inlineHelpText>
        <label>GS Services Work (18 month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_Services_Work_24_month__c</fullName>
        <description>Calculated based on Contract Dates and Total GS Services Remaining</description>
        <formula>if ( MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) &lt; (MONTH(today()) + 12*YEAR(today()) + 24), 
Total_Services_Work_Remaining__c , 
Total_Services_Work_Remaining__c * (24 / (MONTH(Contract_End_Date__c) + 12*YEAR(Contract_End_Date__c) - MONTH(today()) - 12*YEAR(today()))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated based on Contract Dates and Total GS Services Remaining</inlineHelpText>
        <label>GS Services Work (24 month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GS_of_Non_Expense_Budget__c</fullName>
        <description>GS Services Budget /  Total_Non_Expense_Income_BUDGET</description>
        <formula>GS_Execution_Budget__c /  Total_Non_Expense_Income_BUDGET__c</formula>
        <inlineHelpText>GS Services Budget /  Total_Non_Expense_Income_BUDGET</inlineHelpText>
        <label>% GS of Non-Expense Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INC_Custom_Services_Income__c</fullName>
        <label>INC Custom Services income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INC_Project_Expense_Income_Billable__c</fullName>
        <label>INC Project Expense Income Billable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INC_Project_Expense_Income_Non_Billable__c</fullName>
        <label>INC Project Expense Income NonBillable %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INC_Standard_Services_Income__c</fullName>
        <label>INC Standard Services Income %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <description>Set to Self Service, Bundles (Standard), Enterprise (custom, non-standard), or Innovation (grant with non-implementation work). For more information see: https://confluence.dimagi.com/display/BD/Implementation+Types</description>
        <inlineHelpText>Set to Self Service, Bundles (Standard), Enterprise (custom, non-standard), or Innovation (grant with non-implementation work). For more information see: https://confluence.dimagi.com/display/BD/Implementation+Types</inlineHelpText>
        <label>Implementation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundles and Services</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation Grant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which organization is implementing the contract.</inlineHelpText>
        <label>Implementing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Implement_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Charge_Of_Report_Out__c</fullName>
        <label>In Charge Of Report Out</label>
        <picklist>
            <picklistValues>
                <fullName>Project Manager</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Field Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backstop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Sub_contract_BUDGET__c</fullName>
        <description>Set by Ops after internal subcontracts (between DSA, DSI, DWA, or INC) are finalized or updated</description>
        <inlineHelpText>Set by Ops after internal subcontracts (between DSA, DSI, DWA, or INC) are finalized or updated</inlineHelpText>
        <label>Internal Sub-contract BUDGET</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Sub_contract_Spend__c</fullName>
        <description>Updated Monthly by Ops during upload (for invoices between DSA, DSI, DWA, or INC)</description>
        <inlineHelpText>Updated Monthly by Ops during upload (for invoices between DSA, DSI, DWA, or INC)</inlineHelpText>
        <label>Internal Sub-contract Spend</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>